second time commit

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="Navigation">
 			<nav class="nav-main">
 				<div class="nav-bg">
-					<a href="#" class="nav-name">Yee Gallery</a>
+					<a href="#" class="nav-name">Jackson Yee</a>
 					<div class="nav-right">
 						<ul class="nav-ul">
 							<li class="nav-item selected active">
@@ -39,9 +39,44 @@
 		</div>
 		<ul class="cd-hero-slider">
 			<!--Page 1 Gallery ONE-->
-			<li class="selected">
+			<li class="active">
 				<div class="cd-full-width">
-
+					<div class="grid-item">
+						<figure class="effect-sadie">
+							<img src="img/1.jpg" alt="Image" class="img-fluid tm-img">
+							<figcaption>
+								<h2 class="tm-figure-title">JacksonYee</h2>
+								<p class="tm-figure-description">You are the apple of my eyes</p>
+							</figcaption>
+						</figure>
+					</div>
+					<div class="grid-item">
+						<figure class="effect-sadie">
+							<img src="img/10.jpg" alt="Image" class="img-fluid tm-img">
+							<figcaption>
+								<h2 class="tm-figure-title">JacksonYee</h2>
+								<p class="tm-figure-description">You are the apple of my eyes</p>
+							</figcaption>
+						</figure>
+					</div>
+					<div class="grid-item">
+						<figure class="effect-sadie">
+							<img src="img/8.jpg" alt="Image" class="img-fluid tm-img">
+							<figcaption>
+								<h2 class="tm-figure-title">JacksonYee</h2>
+								<p class="tm-figure-description">You are the apple of my eyes</p>
+							</figcaption>
+						</figure>
+					</div>
+					<div class="grid-item">
+						<figure class="effect-sadie">
+							<img src="img/6.jpg" alt="Image" class="img-fluid tm-img">
+							<figcaption>
+								<h2 class="tm-figure-title">JacksonYee</h2>
+								<p class="tm-figure-description">You are the apple of my eyes</p>
+							</figcaption>
+						</figure>
+					</div>
 				</div>
 			</li>
 		</ul>
