effect-sadie done

--- a/index.html
+++ b/index.html
@@ -41,39 +41,126 @@
 			<!--Page 1 Gallery ONE-->
 			<li class="active">
 				<div class="cd-full-width">
+				    <!--第一行图片-->
 					<div class="grid-item">
 						<figure class="effect-sadie">
-							<img src="img/1.jpg" alt="Image" class="img-fluid tm-img">
+							<img src="img/1min.jpg" alt="Image" class="img-fluid tm-img">
 							<figcaption>
 								<h2 class="tm-figure-title">JacksonYee</h2>
 								<p class="tm-figure-description">You are the apple of my eyes</p>
+								<a href="img/1.jpg">View More</a>
 							</figcaption>
 						</figure>
 					</div>
 					<div class="grid-item">
 						<figure class="effect-sadie">
-							<img src="img/10.jpg" alt="Image" class="img-fluid tm-img">
+							<img src="img/10min.jpg" alt="Image" class="img-fluid tm-img">
 							<figcaption>
 								<h2 class="tm-figure-title">JacksonYee</h2>
 								<p class="tm-figure-description">You are the apple of my eyes</p>
+								<a href="img/10.jpg">View More</a>
 							</figcaption>
 						</figure>
 					</div>
 					<div class="grid-item">
 						<figure class="effect-sadie">
-							<img src="img/8.jpg" alt="Image" class="img-fluid tm-img">
+							<img src="img/8min.jpg" alt="Image" class="img-fluid tm-img">
 							<figcaption>
 								<h2 class="tm-figure-title">JacksonYee</h2>
 								<p class="tm-figure-description">You are the apple of my eyes</p>
+								<a href="img/8.jpg">View More</a>
 							</figcaption>
 						</figure>
 					</div>
 					<div class="grid-item">
 						<figure class="effect-sadie">
-							<img src="img/6.jpg" alt="Image" class="img-fluid tm-img">
+							<img src="img/6min.jpg" alt="Image" class="img-fluid tm-img">
 							<figcaption>
 								<h2 class="tm-figure-title">JacksonYee</h2>
 								<p class="tm-figure-description">You are the apple of my eyes</p>
+								<a href="img/6.jpg">View More</a>
+							</figcaption>
+						</figure>
+					</div>
+					<!--第二行图片-->
+					<div class="grid-item">
+						<figure class="effect-sadie">
+							<img src="img/1min.jpg" alt="Image" class="img-fluid tm-img">
+							<figcaption>
+								<h2 class="tm-figure-title">JacksonYee</h2>
+								<p class="tm-figure-description">You are the apple of my eyes</p>
+								<a href="img/1.jpg">View More</a>
+							</figcaption>
+						</figure>
+					</div>
+					<div class="grid-item">
+						<figure class="effect-sadie">
+							<img src="img/10min.jpg" alt="Image" class="img-fluid tm-img">
+							<figcaption>
+								<h2 class="tm-figure-title">JacksonYee</h2>
+								<p class="tm-figure-description">You are the apple of my eyes</p>
+								<a href="img/10.jpg">View More</a>
+							</figcaption>
+						</figure>
+					</div>
+					<div class="grid-item">
+						<figure class="effect-sadie">
+							<img src="img/8min.jpg" alt="Image" class="img-fluid tm-img">
+							<figcaption>
+								<h2 class="tm-figure-title">JacksonYee</h2>
+								<p class="tm-figure-description">You are the apple of my eyes</p>
+								<a href="img/8.jpg">View More</a>
+							</figcaption>
+						</figure>
+					</div>
+					<div class="grid-item">
+						<figure class="effect-sadie">
+							<img src="img/6min.jpg" alt="Image" class="img-fluid tm-img">
+							<figcaption>
+								<h2 class="tm-figure-title">JacksonYee</h2>
+								<p class="tm-figure-description">You are the apple of my eyes</p>
+								<a href="img/6.jpg">View More</a>
+							</figcaption>
+						</figure>
+					</div>
+					<!--第三行图片-->
+					<div class="grid-item">
+						<figure class="effect-sadie">
+							<img src="img/1min.jpg" alt="Image" class="img-fluid tm-img">
+							<figcaption>
+								<h2 class="tm-figure-title">JacksonYee</h2>
+								<p class="tm-figure-description">You are the apple of my eyes</p>
+								<a href="img/1.jpg">View More</a>
+							</figcaption>
+						</figure>
+					</div>
+					<div class="grid-item">
+						<figure class="effect-sadie">
+							<img src="img/10min.jpg" alt="Image" class="img-fluid tm-img">
+							<figcaption>
+								<h2 class="tm-figure-title">JacksonYee</h2>
+								<p class="tm-figure-description">You are the apple of my eyes</p>
+								<a href="img/10.jpg">View More</a>
+							</figcaption>
+						</figure>
+					</div>
+					<div class="grid-item">
+						<figure class="effect-sadie">
+							<img src="img/8min.jpg" alt="Image" class="img-fluid tm-img">
+							<figcaption>
+								<h2 class="tm-figure-title">JacksonYee</h2>
+								<p class="tm-figure-description">You are the apple of my eyes</p>
+								<a href="img/8.jpg">View More</a>
+							</figcaption>
+						</figure>
+					</div>
+					<div class="grid-item">
+						<figure class="effect-sadie">
+							<img src="img/6min.jpg" alt="Image" class="img-fluid tm-img">
+							<figcaption>
+								<h2 class="tm-figure-title">JacksonYee</h2>
+								<p class="tm-figure-description">You are the apple of my eyes</p>
+								<a href="img/6.jpg">View More</a>
 							</figcaption>
 						</figure>
 					</div>
