--- a/index.html
+++ b/index.html
@@ -46,70 +46,50 @@
 						<figure class="effect-sadie">
 							<img src="img/1min.jpg" alt="Image" class="img-fluid tm-img">
 							<figcaption>
-								<h2 class="tm-figure-title">JacksonYee</h2>
-								<p class="tm-figure-description">You are the apple of my eyes</p>
+								<h2 class="tm-figure-title">Yee</h2>
+								<p class="tm-figure-description">四周年演唱会集锦</p>
 								<a href="img/1.jpg">View More</a>
 							</figcaption>
 						</figure>
 					</div>
 					<div class="grid-item">
 						<figure class="effect-sadie">
-							<img src="img/10min.jpg" alt="Image" class="img-fluid tm-img">
+							<img src="img/2min.jpg" alt="Image" class="img-fluid tm-img">
 							<figcaption>
-								<h2 class="tm-figure-title">JacksonYee</h2>
-								<p class="tm-figure-description">You are the apple of my eyes</p>
-								<a href="img/10.jpg">View More</a>
+								<h2 class="tm-figure-title">Yee</h2>
+								<p class="tm-figure-description">四周年演唱会集锦</p>
+								<a href="img/2.jpg">View More</a>
 							</figcaption>
 						</figure>
 					</div>
 					<div class="grid-item">
 						<figure class="effect-sadie">
-							<img src="img/8min.jpg" alt="Image" class="img-fluid tm-img">
+							<img src="img/3min.jpg" alt="Image" class="img-fluid tm-img">
 							<figcaption>
-								<h2 class="tm-figure-title">JacksonYee</h2>
-								<p class="tm-figure-description">You are the apple of my eyes</p>
-								<a href="img/8.jpg">View More</a>
+								<h2 class="tm-figure-title">Yee</h2>
+								<p class="tm-figure-description">四周年演唱会集锦</p>
+								<a href="img/3.jpg">View More</a>
 							</figcaption>
 						</figure>
 					</div>
 					<div class="grid-item">
 						<figure class="effect-sadie">
-							<img src="img/6min.jpg" alt="Image" class="img-fluid tm-img">
+							<img src="img/4min.png" alt="Image" class="img-fluid tm-img">
 							<figcaption>
-								<h2 class="tm-figure-title">JacksonYee</h2>
-								<p class="tm-figure-description">You are the apple of my eyes</p>
-								<a href="img/6.jpg">View More</a>
+								<h2 class="tm-figure-title">Yee</h2>
+								<p class="tm-figure-description">四周年演唱会集锦</p>
+								<a href="img/4.png">View More</a>
 							</figcaption>
 						</figure>
 					</div>
 					<!--第二行图片-->
 					<div class="grid-item">
 						<figure class="effect-sadie">
-							<img src="img/1min.jpg" alt="Image" class="img-fluid tm-img">
+							<img src="img/5min.jpg" alt="Image" class="img-fluid tm-img">
 							<figcaption>
-								<h2 class="tm-figure-title">JacksonYee</h2>
-								<p class="tm-figure-description">You are the apple of my eyes</p>
-								<a href="img/1.jpg">View More</a>
-							</figcaption>
-						</figure>
-					</div>
-					<div class="grid-item">
-						<figure class="effect-sadie">
-							<img src="img/10min.jpg" alt="Image" class="img-fluid tm-img">
-							<figcaption>
-								<h2 class="tm-figure-title">JacksonYee</h2>
-								<p class="tm-figure-description">You are the apple of my eyes</p>
-								<a href="img/10.jpg">View More</a>
-							</figcaption>
-						</figure>
-					</div>
-					<div class="grid-item">
-						<figure class="effect-sadie">
-							<img src="img/8min.jpg" alt="Image" class="img-fluid tm-img">
-							<figcaption>
-								<h2 class="tm-figure-title">JacksonYee</h2>
-								<p class="tm-figure-description">You are the apple of my eyes</p>
-								<a href="img/8.jpg">View More</a>
+								<h2 class="tm-figure-title">Yee</h2>
+								<p class="tm-figure-description">四周年演唱会集锦</p>
+								<a href="img/5.jpg">View More</a>
 							</figcaption>
 						</figure>
 					</div>
@@ -117,20 +97,40 @@
 						<figure class="effect-sadie">
 							<img src="img/6min.jpg" alt="Image" class="img-fluid tm-img">
 							<figcaption>
-								<h2 class="tm-figure-title">JacksonYee</h2>
-								<p class="tm-figure-description">You are the apple of my eyes</p>
+								<h2 class="tm-figure-title">Yee</h2>
+								<p class="tm-figure-description">四周年演唱会集锦</p>
 								<a href="img/6.jpg">View More</a>
+							</figcaption>
+						</figure>
+					</div>
+					<div class="grid-item">
+						<figure class="effect-sadie">
+							<img src="img/7min.jpg" alt="Image" class="img-fluid tm-img">
+							<figcaption>
+								<h2 class="tm-figure-title">Yee</h2>
+								<p class="tm-figure-description">四周年演唱会集锦</p>
+								<a href="img/7.jpg">View More</a>
+							</figcaption>
+						</figure>
+					</div>
+					<div class="grid-item">
+						<figure class="effect-sadie">
+							<img src="img/8min.jpg" alt="Image" class="img-fluid tm-img">
+							<figcaption>
+								<h2 class="tm-figure-title">Yee</h2>
+								<p class="tm-figure-description">四周年演唱会集锦</p>
+								<a href="img/8.jpg">View More</a>
 							</figcaption>
 						</figure>
 					</div>
 					<!--第三行图片-->
 					<div class="grid-item">
 						<figure class="effect-sadie">
-							<img src="img/1min.jpg" alt="Image" class="img-fluid tm-img">
+							<img src="img/9min.jpg" alt="Image" class="img-fluid tm-img">
 							<figcaption>
-								<h2 class="tm-figure-title">JacksonYee</h2>
-								<p class="tm-figure-description">You are the apple of my eyes</p>
-								<a href="img/1.jpg">View More</a>
+								<h2 class="tm-figure-title">Yee</h2>
+								<p class="tm-figure-description">四周年演唱会集锦</p>
+								<a href="img/9.jpg">View More</a>
 							</figcaption>
 						</figure>
 					</div>
@@ -138,35 +138,103 @@
 						<figure class="effect-sadie">
 							<img src="img/10min.jpg" alt="Image" class="img-fluid tm-img">
 							<figcaption>
-								<h2 class="tm-figure-title">JacksonYee</h2>
-								<p class="tm-figure-description">You are the apple of my eyes</p>
+								<h2 class="tm-figure-title">Yee</h2>
+								<p class="tm-figure-description">四周年演唱会集锦</p>
 								<a href="img/10.jpg">View More</a>
 							</figcaption>
 						</figure>
 					</div>
 					<div class="grid-item">
 						<figure class="effect-sadie">
-							<img src="img/8min.jpg" alt="Image" class="img-fluid tm-img">
+							<img src="img/11min.jpg" alt="Image" class="img-fluid tm-img">
 							<figcaption>
-								<h2 class="tm-figure-title">JacksonYee</h2>
-								<p class="tm-figure-description">You are the apple of my eyes</p>
-								<a href="img/8.jpg">View More</a>
+								<h2 class="tm-figure-title">Yee</h2>
+								<p class="tm-figure-description">四周年演唱会集锦</p>
+								<a href="img/11.jpg">View More</a>
 							</figcaption>
 						</figure>
 					</div>
 					<div class="grid-item">
 						<figure class="effect-sadie">
-							<img src="img/6min.jpg" alt="Image" class="img-fluid tm-img">
+							<img src="img/12min.jpg" alt="Image" class="img-fluid tm-img">
 							<figcaption>
-								<h2 class="tm-figure-title">JacksonYee</h2>
-								<p class="tm-figure-description">You are the apple of my eyes</p>
-								<a href="img/6.jpg">View More</a>
+								<h2 class="tm-figure-title">Yee</h2>
+								<p class="tm-figure-description">四周年演唱会集锦</p>
+								<a href="img/12.jpg">View More</a>
 							</figcaption>
 						</figure>
 					</div>
-				</div>
+					<!--第四行图片-->
+					<div class="grid-item">
+						<figure class="effect-sadie">
+							<img src="img/13min.jpg" alt="Image" class="img-fluid tm-img">
+							<figcaption>
+								<h2 class="tm-figure-title">Yee</h2>
+								<p class="tm-figure-description">四周年演唱会集锦</p>
+								<a href="img/13.jpg">View More</a>
+							</figcaption>
+						</figure>
+					</div>
+					<div class="grid-item">
+						<figure class="effect-sadie">
+							<img src="img/14min.jpg" alt="Image" class="img-fluid tm-img">
+							<figcaption>
+								<h2 class="tm-figure-title">Yee</h2>
+								<p class="tm-figure-description">四周年演唱会集锦</p>
+								<a href="img/14.jpg">View More</a>
+							</figcaption>
+						</figure>
+					</div>
+					<div class="grid-item">
+						<figure class="effect-sadie">
+							<img src="img/15min.jpg" alt="Image" class="img-fluid tm-img">
+							<figcaption>
+								<h2 class="tm-figure-title">Yee</h2>
+								<p class="tm-figure-description">四周年演唱会集锦</p>
+								<a href="img/15.jpg">View More</a>
+							</figcaption>
+						</figure>
+					</div>
+					<div class="grid-item">
+						<figure class="effect-sadie">
+							<img src="img/16min.jpg" alt="Image" class="img-fluid tm-img">
+							<figcaption>
+								<h2 class="tm-figure-title">Yee</h2>
+								<p class="tm-figure-description">四周年演唱会集锦</p>
+								<a href="img/16.jpg">View More</a>
+							</figcaption>
+						</figure>
+					</div>
+				</div><!--cd-full-width-->
 			</li>
-		</ul>
+
+			<!--Page 2 Gallery TWO-->
+			<li>hahaha
+			</li>
+
+			<!--Page 3 Gallery THREE-->
+			<li></li>
+
+			<!--Page 4 Gallery FOUR-->
+			<li></li>
+
+			<!--Page 5 Gallery FIVE-->
+			<li></li>
+
+		</ul><!--cd-hero-slider-->
+		<footer class="tm-footer">
+			<div class="tm-icon-container">
+				<a class="tm-icon-link" href="">1</a>
+				<a class="tm-icon-link" href="">2</a>
+				<a class="tm-icon-link" href="">3</a>
+				<a class="tm-icon-link" href="">4</a>
+			</div>
+			<p class="tm-copyright-text">Copyright 
+				<span class="tm-copyright-year">current year </span> Photo Gallery By 
+				<a href="https://github.com/gggsihan" target="_blank">龚思晗</a>
+			</p>
+		</footer> 
+		
 	</div>
 	<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="js/mainFunc.js"></script>
